added tests, update README.md, added github workflow
