# internal/handler/contract.go
@@ -4,11 +4,13 @@ import (
 	"context"
 	"time"
 
-	"device-manager/internal/service/storage"
+	"device-manager/internal/entity"
 )
 
 type TelemetryService interface {
-	GetTelemetryHistory(ctx context.Context, deviceID string, from time.Time, to time.Time) ([]storage.TelemetryData, error)
+	GetTelemetryLatest(ctx context.Context, deviceID string) (*entity.TelemetryData, error)
+	GetTelemetryHistory(ctx context.Context, deviceID string, from time.Time, to time.Time) ([]entity.TelemetryData, error)
+	AddTelemetry(ctx context.Context, data entity.TelemetryData) error
 }
 
 type Log interface {
